# docs/swagger.json
@@ -93,7 +93,13 @@
         "models.ContentResponse": {
             "type": "object",
             "properties": {
+                "avatar_url": {
+                    "type": "string"
+                },
                 "generated_content": {
+                    "type": "string"
+                },
+                "username": {
                     "type": "string"
                 }
             }
